--- a/styles.css
+++ b/styles.css
@@ -9,12 +9,35 @@ body {
 }
 
 #about img {
-    margin: 10px;
-    margin-left: 35px;
+    margin: 10px auto;
 }
 
-p, li {
+p, #talks li, #notes li {
     text-align: justify;
+    margin: 15px auto;
+}
+
+#about .card {
+    border: none;
+    padding: 0;
+}
+
+#about .card-body {
+    padding: 0 0 10px;
+}
+
+#about .card-footer ul {
+    padding: 10px 0;
+    list-style: none;
+    display: flex;
+    justify-content: space-evenly;
+    margin: 0;
+    font-size: 24px;
+}
+
+#papers p {
+    line-height: 24px;
+    padding-top: 10px;
 }
 
 @keyframes fade-in {
@@ -39,7 +62,7 @@ p, li {
 
 /* styling for mobile view */
 
-@media only screen and (max-width: 480px) {
+@media only screen and (max-width: 600px) {
     header h1 {
         max-width: 70%;
     }
@@ -49,4 +72,69 @@ p, li {
         float: none;
         margin: 10px auto 20px !important;
     }
+
+    #about .col-sm-9 {
+        text-align: center;
+    }
+
+    #about .card {
+        margin: auto;
+    }
+
+    section {
+        margin-bottom: 20px;
+    }
 }
+
+@font-face {
+    font-family: 'icomoon';
+    src:  url('./assets/icomoon/fonts/icomoon.eot?opfx5q');
+    src:  url('./assets/icomoon/fonts/icomoon.eot?opfx5q#iefix') format('embedded-opentype'),
+      url('./assets/icomoon/fonts/icomoon.ttf?opfx5q') format('truetype'),
+      url('./assets/icomoon/fonts/icomoon.woff?opfx5q') format('woff'),
+      url('./assets/icomoon/fonts/icomoon.svg?opfx5q#icomoon') format('svg');
+    font-weight: normal;
+    font-style: normal;
+    font-display: block;
+  }
+  
+  [class^="icon-"], [class*=" icon-"] {
+    /* use !important to prevent issues with browser extensions that change fonts */
+    font-family: 'icomoon' !important;
+    speak: never;
+    font-style: normal;
+    font-weight: normal;
+    font-variant: normal;
+    text-transform: none;
+    line-height: 1;
+  
+    /* Better Font Rendering =========== */
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+  }
+  
+  .icon-mail-envelope-closed:before {
+    content: "\e901";
+  }
+  .icon-researchgate:before {
+    content: "\e902";
+  }
+  .icon-orcid:before {
+    content: "\e903";
+  }
+  .icon-googlescholar:before {
+    content: "\e904";
+    font-size: 26px;
+  }
+  .icon-arxiv:before {
+    content: "\e900";
+    font-size: 26px;
+  }
+  .icon-linkedin:before {
+    content: "\eac9";
+    font-size: 26px;
+  }  
+
+  .card-footer a:hover {
+      text-decoration: none;
+  }
